1. Add more json questions files; 2. fix to portrait mode only; 3.add shuffle function to the largest quiz run; 3.fix logic on summary page depend from wrong answers- creating extra list of questions to check again

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -64,6 +64,9 @@ flutter:
   assets:
     - assets/grammar_80.json
     - assets/grammar_25.json
+    - assets/grammar_65.json
+    - assets/vocabulary_80.json
+    - assets/vocabulary_45.json
     - assets/img/
 
   # An image asset can refer to one or more resolution-specific "variants", see
